--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "build:asc": "asc templates/default-painter.ts -t templates/asc.wat -b templates/asc.wasm"
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,8 @@
   },
   "homepage": "https://github.com/nhaef/painting-drone#readme",
   "devDependencies": {
-    "@types/jimp": "^0.2.28",
     "@types/node": "^16.11.7",
-    "assemblyscript": "^0.19.20",
     "typescript": "^4.4.4"
   },
-  "dependencies": {
-    "jimp": "^0.16.1"
-  }
+  "dependencies": {}
 }
