--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "test": "jest",
     "postinstall": "npm run build"
   },
   "repository": {
@@ -18,8 +19,9 @@
   },
   "homepage": "https://github.com/nhaef/painting-drone#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.7",
+    "jest": "^27.3.1",
     "typescript": "^4.4.4"
-  },
-  "dependencies": {}
+  }
 }
